# doc-intelligence-pipeline

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: deploy.yml
app/api/: documents.py
app/core/: aws_clients.py  config.py
app/pipeline/: query_graph.py
app/schemas/: documents.py
app/worker/: extractor.py  worker.py
terraform/: main.tf  outputs.tf  terraform.tfstate  variables.tf  versions.tf
