[project]
name = "doc-intelligence-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.24",
    "fastapi>=0.136.3",
    "langchain-aws>=1.5.1",
    "langfuse>=4.7.1",
    "langgraph>=1.2.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.49.0",
]
